additional comments and cleanup

--- a/sandbox/angular-spotify-api/index.html
+++ b/sandbox/angular-spotify-api/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SpotifyAPI Angular App</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/app.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.js"></script>
+	<link rel="stylesheet" href="cdn/bootstrap.min.css">
+	<script src="cdn/angular.js"></script>
+	<script src="cdn/angular-route.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/filters.js"></script>
 </head>
 <body ng-controller="ArtistListCtrl">
 ​
+	<!-- Main AngularJS directive -->
 	<div ng-view></div>
 ​
 	<!-- extra files -->
