Added social media icon

--- a/sandbox/rotating-cube/rubik.html
+++ b/sandbox/rotating-cube/rubik.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Rotating Cube (Rubik)</title>
+  <!-- Logo for Social Media -->
+  <link rel="image_src" href="http://juan-domenech.github.io/sandbox/rotating-cube/blue-side.png" />
 </head>
 
 <!-- Credits https://davidwalsh.name/css-cube -->
