--- a/laprotectora.org/index.html
+++ b/laprotectora.org/index.html
@@ -66,39 +66,157 @@ border-style: solid;
 }
 */
 
+
 .navbar{
 	font-size: 18px;
+	background-color:rgba(255, 255, 255, 0.9);
 }
 
 .flag{
 	height: 40px;
-	padding: 0px;
-	margin:0px;
-	line-height: 0px;
-	vertical-align: top;
-
 
 }
 
-#primary-post{
-	background-image: url(images/adopta-la-protectora-animals-tarragona.jpg);
-	background-repeat: no-repeat;
-	background-size: auto;
-	width:100%;
-	height: 500px;
-
+.blog-post{
 	color:white;
+	margin:10px
+}
+
+h1{
+	font-size: 30px;
+}
+h2{
+	font-size: 25px;
+}
+h4{
+	font-size: 12px; /*responsive*/
+}
+
+
+#primary-post{
+	background-image: url(images/adopta-la-protectora-animals-tarragona-2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 500px;
 }
 
 #primary-text{
 	margin-left: 30px;
 	margin-right: 30px;
 	background-color: #35b026;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 15px;
+	padding-top: 0px;
 	position: absolute;
 	top:30px;
 }
+
+#secondary-post{
+	background-image: url(images/mapa.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 200px;
+
+}
+
+#secondary-text{
+	margin-left: 200px; /* responsive */
+	margin-right: 30px;
+	margin-top: 10px;
+	background-color: #35b026;
+	padding: 10px;
+
+	position: relative;
+	top:30px;
+
+}
+
+
+#terciary-post{
+	background-image: url(images/necessitem-ajuda-a-la-protectora.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 200px;
+
+}
+
+#terciary-text{
+	margin-left: 200px; /* responsive */
+	margin-right: 30px;
+	margin-top: 10px;
+	background-color: #35b026;
+	padding: 10px;
+
+	position: relative;
+	top:30px;
+
+}
+
+
+/*==========  Mobile First Method  ==========*/
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+    #des {
+			font-size: 70%;
+    }
+    h4{
+    	font-size: 0px;
+    }
+}
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+    #des {
+			font-size: 75%;
+    }
+}
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+    #des {
+			font-size: 80%;
+    }
+h4{
+    	font-size: 14px;
+  }
+
+}
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+    #des {
+			font-size: 90%;
+    }
+	h4{
+    	font-size: 14px;
+    }
+	#secondary-text{
+		margin-left: 400px;
+	}
+	#terciary-text{
+		margin-left: 400px;
+	}
+}
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+    #des {
+			font-size: 100%;
+    }
+	#secondary-text{
+		margin-left: 400px;
+	}
+	#terciary-text{
+		margin-left: 400px;
+	}
+h4{
+    	font-size: 14px;
+  }
+}
+
+
+
+
+
+
+
+
+
 
 
 /*
@@ -181,23 +299,6 @@ border-style: solid;
 	  </div>
 	</nav>
 
-<!--
-
-	<header id="header" class="row language-cat">
-		<nav class="col-sm-12"><ul class="nav navbar-nav navbar-left navbar-fixed-top">
-			<li class="navbar-header navbar-brand" id="main-logo" ><a href="index.html">Logo<img src="images/la-protectora-org-tarragona-logo.pngx"></a></a></li>
-			<li><a href="#">Adopta!</a></li>
-			<li><a href="#">On som?</a></li>
-			<li><a href="#">Voluntaris</a></li>
-			<li><a href="#">Mascota perduda</a></li>
-			<li id="castellano-icon"><a href="#"><img src="images/Flag-Icon-Spain.png"></a></li>
-			<li id="catalan-icon"><a href="#">Català</a></li>
-		</ul></nav>
-	</header>
-
--->
-
-
 
 
 <div class="container">
@@ -213,29 +314,34 @@ border-style: solid;
 
       <div id="primary-post" class="blog-post language-cat">
       	<div id="primary-text">
-	        <h2 class="blog-post-title">Adopta! (Si us plau)</h2>
-	        <h4>Des d'aquí fem una crida a la importància de l'adopció...</h4>
+	        <h1 class="blog-post-title">Adopta! (Si us plau)</h1>
+	        <h4>Des d'aquí fem una crida a la importància de l'adopció...</h2>
 					<!--<p>Penseu que si adopteu un gos, no només li esteu donant amb ell una nova vida, sinó que també ajudeu a la resta de gossos que es queden a la gàbia a tenir una mica més d'espai vital, fet nolt important dabant l'augment dels abandonaments...</p>-->
 				</div>
       </div><!-- /.blog-post -->
 
-      <div class="blog-post language-cat">
-        <h2 class="blog-post-title">On Som?</h2>
-				<h4>Mapa, Adreces, Com arrivar-hi, etc.</h4>
-				<p>Estem al Carrer Sofre, s/n - Polígon Industrial Riu Clar (Tarragona). Entra aqui per veure el Mapa i altress dades d'interes...</p>
+      <div id="secondary-post" class="blog-post language-cat">
+      	<div id="secondary-text">
+	        <h2 class="blog-post-title">On Som?</h2>
+					<h4>Mapa, Adreces, Com arrivar-hi, etc...</h4>
+					<!--<p>Estem al Carrer Sofre, s/n - Polígon Industrial Riu Clar (Tarragona). Entra aqui per veure el Mapa i altress dades d'interes...</p>-->
+				</div>
       </div><!-- /.blog-post -->
 
-      <div class="blog-post language-cat">
-        <h2 class="blog-post-title">Necessitem Ayuda</h2>
-				<h4>Pots ayudar convertint-te en voluntari, portar-nos menjar i equipaments per el animals</h4>
-				<p>En primer lloc, volem agrair a tots els voluntaris de la Protectora la seva dedicació i esforç per a fer més agradable la vida de tots els animals que tenim a les nostres instal·lacions. Sabem que vosaltres sou el veritable motor de la Protectora...</p>
+      <div id="terciary-post" class="blog-post language-cat">
+				<div id="terciary-text">
+	        <h2 class="blog-post-title">Necessitem Ayuda</h2>
+					<h4>Pots ayudar convertint-te en voluntari, portar-nos menjar i equipaments per el animals</h4>
+					<!--<p>En primer lloc, volem agrair a tots els voluntaris de la Protectora la seva dedicació i esforç per a fer més agradable la vida de tots els animals que tenim a les nostres instal·lacions. Sabem que vosaltres sou el veritable motor de la Protectora...</p>-->
+				</div>
       </div><!-- /.blog-post -->
 
     </div><!-- /.blog-main -->
 
+
 		<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
 			<div id="contact-icons" class="sidebar-module sidebar-module-inset language-cat"><article>
-			    <h1>Com contactar?</h1>
+			    <h2>Com contactar?</h2>
 			    <ul class="list-unstyled">
 			      <li><a href="#" rel="external">GoogleMaps</a></li>
 			      <li><a href="#" rel="external">Facebook</a></li>
@@ -247,7 +353,7 @@ border-style: solid;
 			    </ul>
 			</article></div>
 			<div id="links-collection" class="side language-cat"><article>
-			    <h1>Entitats amigues</h1>
+			    <h2>Entitats amigues</h2>
 			    <ul class="list-unstyled">
 			      <li><a href="#" rel="external">FAADA http://www.faada.org/</a></li>
 			      <li><a href="#" rel="external">Refugi de Mataro http://www.protectoramataro.org/</a></li>
@@ -286,10 +392,7 @@ border-style: solid;
 	<footer id="footer" class="blog-footer body language-cat">
 
 		<nav><ul>
-			<li>
-				<a href="index.html">
-					<img src="images/la-protectora-org-tarragona-logo.png" alt="Home">Home
-				</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Adopta!</a></li>
 			<li><a href="#">On som?</a></li>
 			<li><a href="#">Voluntaris</a></li>
