responsive fonts for sidebar

--- a/laprotectora.org/index.html
+++ b/laprotectora.org/index.html
@@ -143,8 +143,8 @@
 			    <h2>Dades de contacte:</h2>
 			    <ul class="list-unstyled">
 			      <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58" rel="external"><img class="icon" src="images/Google-Maps-icon.png">Mapa</a></li>
-			      <li><a href="#" rel="external"><img class="icon" src="images/Facebook.png">Facebook</a></li>
-			      <li><a href="#" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu Electronic</a></li>
+			      <li><a href="https://www.facebook.com/protectoratarragona/" rel="external"><img class="icon" src="images/Facebook.png">Facebook</a></li>
+			      <li><a href="mailto:laprotectora@gmail.com" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu Electronic</a></li>
 			      <li><a href="#" rel="external"><img class="icon" src="images/phone.png">Telefon</a></li>
 			      <li><a href="#" rel="external"><img class="icon" src="images/Whatsapp.png">WhatsApp</a></li>
 			      <li><a href="#" rel="external"><img class="icon" src="images/Paypal.png">Paypal</a></li>
