better footer & links for navbar

--- a/laprotectora.org/adopta.html
+++ b/laprotectora.org/adopta.html
@@ -58,16 +58,16 @@
 	    </div>
 	    <div id="navbar" class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
-	        <li><a href="#">Adopta!</a></li>
-	        <li><a href="#about">On som?</a></li>
-	        <li><a href="#contact">Voluntaris</a></li>
+	        <li><a href="adopta.html">Adopta!</a></li>
+	        <li><a href="on-som.html">On som?</a></li>
+	        <li><a href="voluntaris.html">Voluntaris</a></li>
 
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-Catalonia.png"></a></li>
 	        <li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-Spain.png"></a></li>
 	       	<li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-United-KingdomGreat-Britain.png"></a></li>
-	        <li><a href="./">Contacta<span class="sr-only">(current)</span></a></li>
+	        <li><a href=contacte.html>Contacta<span class="sr-only">(current)</span></a></li>
 	      </ul>
 	    </div><!--/.nav-collapse -->
 	  </div>
@@ -163,6 +163,19 @@
 			    </ul></article>
 			</div>
 
+			<div class="sidebar-module sidebar-module-inset facebook-post language-cat">
+				<article>
+					<br>
+					<h2>A la xarxa:</h2>
+					<img src="images/facebook-banner-1.png" width="300px">
+				</article>
+			</div>
+
+			<div class="sidebar-module sidebar-module-inset facebook-post language-cat">
+				<article>
+					<img src="images/facebook-banner-2.png" width="300px">
+				</article>
+			</div>
 
 		</div><!-- /.blog-sidebar -->
 
@@ -172,18 +185,18 @@
 
 
 <footer id="footer" class="footer">
-	<div id="footer-text" class="container language-cat">
-	<pre>
-	Telefon: (+34) 653 073 713
-	eMail:  laprotectora@gmail.com
-	<a href="http://www.laprotectora.org">http://www.laprotectora.org/</a></pre>
-	<pre>
-	Carrer Sofre, s/n
-	Polígon Industrial Riu Clar
-	Tarragona</pre>
+	<div id="footer-text" class="container row language-cat">
+		<pre class="col-sm-6">
+		Telefon: (+34) 653 073 713
+		eMail:  laprotectora@gmail.com
+		<a href="http://www.laprotectora.org">http://www.laprotectora.org/</a></pre>
+		<pre class="col-sm-6">
+		Carrer Sofre, s/n
+		Polígon Industrial Riu Clar
+		Tarragona</pre>
 		<a href="http://laprotectora.org/documents/avislegalweb.pdf">Avís legal Protecció de Dades.</a>
 		<p>© Associació Protectora d'Animals i plantes de Tarragona 2011</p>
- </div>
+  </div>
 </footer>
 
 </body>
