corrected responsivenes in Android

--- a/laprotectora.org/adopta.html
+++ b/laprotectora.org/adopta.html
@@ -28,6 +28,9 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/main.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body id="index" class="col-sm-12 body">
@@ -187,13 +190,13 @@
 <footer id="footer" class="footer">
 	<div id="footer-text" class="container row language-cat">
 		<pre class="col-sm-6">
-		Telefon: (+34) 653 073 713
-		eMail:  laprotectora@gmail.com
-		<a href="http://www.laprotectora.org">http://www.laprotectora.org/</a></pre>
+Telefon: (+34) 653 073 713
+eMail:  laprotectora@gmail.com
+<a href="http://www.laprotectora.org">http://www.laprotectora.org/</a></pre>
 		<pre class="col-sm-6">
-		Carrer Sofre, s/n
-		Polígon Industrial Riu Clar
-		Tarragona</pre>
+Carrer Sofre, s/n
+Polígon Industrial Riu Clar
+Tarragona</pre>
 		<a href="http://laprotectora.org/documents/avislegalweb.pdf">Avís legal Protecció de Dades.</a>
 		<p>© Associació Protectora d'Animals i plantes de Tarragona 2011</p>
   </div>
