--- a/sandbox/angular-spotify-api/index.html
+++ b/sandbox/angular-spotify-api/index.html
@@ -4,13 +4,18 @@
 	<meta charset="UTF-8">
 	<title>SpotifyAPI Angular App</title>
 	<link rel="stylesheet" href="cdn/bootstrap.min.css">
-	<script src="cdn/angular.js"></script>
-	<script src="cdn/angular-route.js"></script>
+	<script src="cdn/angular.min-1.5.0.js"></script>
+	<script src="cdn/angular-route.min-1.5.0.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/filters.js"></script>
 	<!-- Logo for Social Media -->
 	<link rel="image_src" href="https://angularjs.org/img/AngularJS-large.png" />
+	<!--[if IE]>
+	<h1>Warning!</h1>
+	<h2>This AngularJS/AJAX example is not supported under Microsoft Explorer.</h2>
+	<h3>Please use a proper Internet Browser.</h3>
+	<![endif]-->
 </head>
 <body ng-controller="ArtistListCtrl">
 ​
