Added disclaimer for MSIE

--- a/sandbox/jquery-spotify-api/index.html
+++ b/sandbox/jquery-spotify-api/index.html
@@ -6,6 +6,11 @@
     <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
     <!-- Logo for social media -->
     <link rel="image_src" href="http://www.openanswers.co.uk/oa/images/logos/jquery-logo.png" />
+    <!--[if IE]>
+    <h1>Warning!</h1>
+    <h2>This jQuery example is not supported under Microsoft Explorer.</h2>
+    <h3>Please use a proper Internet Browser.</h3>
+    <![endif]-->
 </head>
 <body>
 
